--- a/_modules/polyanalyst6api/exceptions.html
+++ b/_modules/polyanalyst6api/exceptions.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>polyanalyst6api.exceptions &#8212; polyanalyst6api 0.15.0 documentation</title>
+    <title>polyanalyst6api.exceptions &#8212; polyanalyst6api 0.16.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -63,6 +63,10 @@
 
 <div class="viewcode-block" id="ClientException"><a class="viewcode-back" href="../../index.html#polyanalyst6api.ClientException">[docs]</a><span class="k">class</span> <span class="nc">ClientException</span><span class="p">(</span><span class="n">PAException</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Indicate errors that don&#39;t involve interaction with PolyAnalyst&#39;s API.&quot;&quot;&quot;</span></div>
+
+
+<span class="k">class</span> <span class="nc">_WrapperNotFound</span><span class="p">(</span><span class="n">PAException</span><span class="p">):</span>
+    <span class="k">pass</span>
 </pre></div>
 
           </div>
