--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; polyanalyst6api 0.15.0 documentation</title>
+    <title>Index &#8212; polyanalyst6api 0.16.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -78,12 +78,14 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.delete">delete() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.api.Project.dataset">dataset() (polyanalyst6api.api.Project method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_file">delete_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.api.Project.delete">delete() (polyanalyst6api.api.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_file">delete_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_folder">delete_folder() (polyanalyst6api.api.RemoteFileSystem method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.download_file">download_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
