--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; polyanalyst6api 0.16.0 documentation</title>
+    <title>Index &#8212; polyanalyst6api 0.17.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -41,6 +41,7 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
@@ -78,6 +79,8 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.DataSet">DataSet (class in polyanalyst6api.api)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.Project.dataset">dataset() (polyanalyst6api.api.Project method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.Project.delete">delete() (polyanalyst6api.api.Project method)</a>
@@ -110,6 +113,8 @@
 </li>
       <li><a href="index.html#polyanalyst6api.api.Project.get_execution_stats">get_execution_stats() (polyanalyst6api.api.Project method)</a>
 </li>
+      <li><a href="index.html#polyanalyst6api.api.DataSet.get_info">get_info() (polyanalyst6api.api.DataSet method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.Project.get_node_list">get_node_list() (polyanalyst6api.api.Project method)</a>
 </li>
   </ul></td>
@@ -118,11 +123,25 @@
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_parameters">get_parameters() (polyanalyst6api.api.API method)</a>
 </li>
+      <li><a href="index.html#polyanalyst6api.api.DataSet.get_progress">get_progress() (polyanalyst6api.api.DataSet method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.API.get_server_info">get_server_info() (polyanalyst6api.api.API method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.Project.get_tasks">get_tasks() (polyanalyst6api.api.Project method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_versions">get_versions() (polyanalyst6api.api.API method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.Project.is_running">is_running() (polyanalyst6api.api.Project method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.DataSet.iter_rows">iter_rows() (polyanalyst6api.api.DataSet method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -146,10 +165,14 @@
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.post">post() (polyanalyst6api.api.API method)</a>
 </li>
+      <li><a href="index.html#polyanalyst6api.api.DataSet.preview">preview() (polyanalyst6api.api.DataSet method)</a>
+
+      <ul>
+        <li><a href="index.html#polyanalyst6api.api.Project.preview">(polyanalyst6api.api.Project method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.preview">preview() (polyanalyst6api.api.Project method)</a>
-</li>
       <li><a href="index.html#polyanalyst6api.api.Project">Project (class in polyanalyst6api.api)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.project">project() (polyanalyst6api.api.API method)</a>
