--- a/_modules/polyanalyst6api/exceptions.html
+++ b/_modules/polyanalyst6api/exceptions.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>polyanalyst6api.exceptions &#8212; polyanalyst6api 0.17.0 documentation</title>
+    <title>polyanalyst6api.exceptions &#8212; polyanalyst6api 0.18.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -38,6 +38,8 @@
 
 <span class="sd">This module contains polyanlyst6api specific Exception classes.</span>
 <span class="sd">&quot;&quot;&quot;</span>
+
+<span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;PAException&#39;</span><span class="p">,</span> <span class="s1">&#39;ClientException&#39;</span><span class="p">,</span> <span class="s1">&#39;APIException&#39;</span><span class="p">]</span>
 
 
 <div class="viewcode-block" id="PAException"><a class="viewcode-back" href="../../index.html#polyanalyst6api.PAException">[docs]</a><span class="k">class</span> <span class="nc">PAException</span><span class="p">(</span><span class="ne">Exception</span><span class="p">):</span>
