--- a/genindex.html
+++ b/genindex.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; polyanalyst6api 0.17.0 documentation</title>
+    <title>Index &#8212; polyanalyst6api 0.18.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
@@ -53,7 +53,7 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.abort">abort() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.abort">abort() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -67,11 +67,13 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.ClientException">ClientException</a>
+      <li><a href="index.html#polyanalyst6api.project.Parameters.clear">clear() (polyanalyst6api.project.Parameters method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.create_folder">create_folder() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.ClientException">ClientException</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.drive.Drive.create_folder">create_folder() (polyanalyst6api.drive.Drive method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -79,19 +81,21 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.DataSet">DataSet (class in polyanalyst6api.api)</a>
+      <li><a href="index.html#polyanalyst6api.project.DataSet">DataSet (class in polyanalyst6api.project)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.dataset">dataset() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.dataset">dataset() (polyanalyst6api.project.Project method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.delete">delete() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.delete">delete() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_file">delete_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.drive.Drive.delete_file">delete_file() (polyanalyst6api.drive.Drive method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_folder">delete_folder() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.drive.Drive.delete_folder">delete_folder() (polyanalyst6api.drive.Drive method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.download_file">download_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.drive.Drive.download_file">download_file() (polyanalyst6api.drive.Drive method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.drive.Drive">Drive (class in polyanalyst6api.drive)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -99,7 +103,7 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.execute">execute() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.execute">execute() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -108,26 +112,30 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#polyanalyst6api.api.API.get">get() (polyanalyst6api.api.API method)</a>
+
+      <ul>
+        <li><a href="index.html#polyanalyst6api.project.Parameters.get">(polyanalyst6api.project.Parameters method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_execution_statistics">get_execution_statistics() (polyanalyst6api.api.Project method)</a>
+      </ul></li>
+      <li><a href="index.html#polyanalyst6api.project.Project.get_execution_statistics">get_execution_statistics() (polyanalyst6api.project.Project method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_execution_stats">get_execution_stats() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.get_execution_stats">get_execution_stats() (polyanalyst6api.project.Project method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.DataSet.get_info">get_info() (polyanalyst6api.api.DataSet method)</a>
+      <li><a href="index.html#polyanalyst6api.project.DataSet.get_info">get_info() (polyanalyst6api.project.DataSet method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_node_list">get_node_list() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.get_node_list">get_node_list() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_nodes">get_nodes() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.get_nodes">get_nodes() (polyanalyst6api.project.Project method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_parameters">get_parameters() (polyanalyst6api.api.API method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.DataSet.get_progress">get_progress() (polyanalyst6api.api.DataSet method)</a>
+      <li><a href="index.html#polyanalyst6api.project.DataSet.get_progress">get_progress() (polyanalyst6api.project.DataSet method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_server_info">get_server_info() (polyanalyst6api.api.API method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_tasks">get_tasks() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.get_tasks">get_tasks() (polyanalyst6api.project.Project method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_versions">get_versions() (polyanalyst6api.api.API method)</a>
 </li>
@@ -137,11 +145,11 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.is_running">is_running() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.is_running">is_running() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.DataSet.iter_rows">iter_rows() (polyanalyst6api.api.DataSet method)</a>
+      <li><a href="index.html#polyanalyst6api.project.DataSet.iter_rows">iter_rows() (polyanalyst6api.project.DataSet method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -163,17 +171,21 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#polyanalyst6api.PAException">PAException</a>
 </li>
+      <li><a href="index.html#polyanalyst6api.project.Parameters">Parameters (class in polyanalyst6api.project)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.project.Project.parameters">parameters() (polyanalyst6api.project.Project method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.API.post">post() (polyanalyst6api.api.API method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.DataSet.preview">preview() (polyanalyst6api.api.DataSet method)</a>
-
-      <ul>
-        <li><a href="index.html#polyanalyst6api.api.Project.preview">(polyanalyst6api.api.Project method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project">Project (class in polyanalyst6api.api)</a>
+      <li><a href="index.html#polyanalyst6api.project.DataSet.preview">preview() (polyanalyst6api.project.DataSet method)</a>
+
+      <ul>
+        <li><a href="index.html#polyanalyst6api.project.Project.preview">(polyanalyst6api.project.Project method)</a>
+</li>
+      </ul></li>
+      <li><a href="index.html#polyanalyst6api.project.Project">Project (class in polyanalyst6api.project)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.project">project() (polyanalyst6api.api.API method)</a>
 </li>
@@ -183,9 +195,7 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem">RemoteFileSystem (class in polyanalyst6api.api)</a>
-</li>
-      <li><a href="index.html#polyanalyst6api.api.Project.repair">repair() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.repair">repair() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -199,11 +209,13 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.save">save() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.save">save() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.set_parameters">set_parameters() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Parameters.set">set() (polyanalyst6api.project.Parameters method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.project.Project.set_parameters">set_parameters() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -211,13 +223,13 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.unload">unload() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.unload">unload() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.upload">upload() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.drive.Drive.upload">upload() (polyanalyst6api.drive.Drive method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.upload_file">upload_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
+      <li><a href="index.html#polyanalyst6api.drive.Drive.upload_file">upload_file() (polyanalyst6api.drive.Drive method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -225,7 +237,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.wait_for_completion">wait_for_completion() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.project.Project.wait_for_completion">wait_for_completion() (polyanalyst6api.project.Project method)</a>
 </li>
   </ul></td>
 </tr></table>
