--- a/_modules/index.html
+++ b/_modules/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Overview: module code &#8212; polyanalyst6api 0.17.0 documentation</title>
+    <title>Overview: module code &#8212; polyanalyst6api 0.18.0 documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -33,7 +33,9 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="polyanalyst6api/api.html">polyanalyst6api.api</a></li>
+<li><a href="polyanalyst6api/drive.html">polyanalyst6api.drive</a></li>
 <li><a href="polyanalyst6api/exceptions.html">polyanalyst6api.exceptions</a></li>
+<li><a href="polyanalyst6api/project.html">polyanalyst6api.project</a></li>
 </ul>
 
           </div>
