--- a/_modules/polyanalyst6api/drive.html
+++ b/_modules/polyanalyst6api/drive.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>polyanalyst6api.drive &#8212; polyanalyst6api 0.18.0 documentation</title>
+    <title>polyanalyst6api.drive &#8212; polyanalyst6api 0.19.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -182,7 +182,7 @@
         <span class="c1"># free up resources on the server if file is not uploaded completely</span>
         <span class="k">try</span><span class="p">:</span>
             <span class="n">offset</span> <span class="o">=</span> <span class="n">_get_offset</span><span class="p">(</span><span class="n">file_endpoint</span><span class="p">,</span> <span class="n">session</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">api</span><span class="o">.</span><span class="n">_s</span><span class="p">)</span>
-            <span class="k">if</span> <span class="n">file_size</span> <span class="o">!=</span> <span class="n">offset</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">file_size</span> <span class="o">!=</span> <span class="n">offset</span> <span class="ow">or</span> <span class="n">file_size</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
                 <span class="n">pytus</span><span class="o">.</span><span class="n">terminate</span><span class="p">(</span><span class="n">file_endpoint</span><span class="p">,</span> <span class="n">session</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">api</span><span class="o">.</span><span class="n">_s</span><span class="p">)</span>
         <span class="k">except</span> <span class="n">requests</span><span class="o">.</span><span class="n">exceptions</span><span class="o">.</span><span class="n">RequestException</span><span class="p">:</span>
             <span class="k">pass</span></div></div>
