--- a/_modules/polyanalyst6api/api.html
+++ b/_modules/polyanalyst6api/api.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>polyanalyst6api.api &#8212; polyanalyst6api 0.20.1 documentation</title>
+    <title>polyanalyst6api.api &#8212; polyanalyst6api 0.21.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -54,9 +54,7 @@
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;API&#39;</span><span class="p">]</span>
 
 <span class="n">urllib3</span><span class="o">.</span><span class="n">disable_warnings</span><span class="p">(</span><span class="n">urllib3</span><span class="o">.</span><span class="n">exceptions</span><span class="o">.</span><span class="n">InsecureRequestWarning</span><span class="p">)</span>
-<span class="n">warnings</span><span class="o">.</span><span class="n">simplefilter</span><span class="p">(</span>
-    <span class="s1">&#39;always&#39;</span><span class="p">,</span> <span class="ne">UserWarning</span>
-<span class="p">)</span>  <span class="c1"># without this set_parameters will show warnings only once</span>
+<span class="n">warnings</span><span class="o">.</span><span class="n">simplefilter</span><span class="p">(</span><span class="s1">&#39;always&#39;</span><span class="p">,</span> <span class="ne">UserWarning</span><span class="p">)</span>  <span class="c1"># without this set_parameters will show warnings only once</span>
 
 <span class="n">NodeTypes</span> <span class="o">=</span> <span class="p">[</span>
     <span class="s2">&quot;CSV Exporter/&quot;</span><span class="p">,</span>
@@ -261,9 +259,7 @@
             <span class="k">if</span> <span class="s1">&#39;are not logged in&#39;</span> <span class="ow">in</span> <span class="n">response</span><span class="o">.</span><span class="n">text</span><span class="p">:</span>
                 <span class="n">error_msg</span> <span class="o">=</span> <span class="s1">&#39;You are not logged in to PolyAnalyst Server&#39;</span>
             <span class="k">elif</span> <span class="s1">&#39;operation is limited &#39;</span> <span class="ow">in</span> <span class="n">response</span><span class="o">.</span><span class="n">text</span><span class="p">:</span>
-                <span class="n">error_msg</span> <span class="o">=</span> <span class="p">(</span>
-                    <span class="s1">&#39;Access to this operation is limited to project owners and administrator&#39;</span>
-                <span class="p">)</span>
+                <span class="n">error_msg</span> <span class="o">=</span> <span class="s1">&#39;Access to this operation is limited to project owners and administrator&#39;</span>
         <span class="k">elif</span> <span class="n">response</span><span class="o">.</span><span class="n">status_code</span> <span class="o">==</span> <span class="mi">500</span><span class="p">:</span>
             <span class="k">with</span> <span class="n">contextlib</span><span class="o">.</span><span class="n">suppress</span><span class="p">(</span><span class="ne">IndexError</span><span class="p">,</span> <span class="ne">TypeError</span><span class="p">):</span>
                 <span class="k">if</span> <span class="n">json</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">==</span> <span class="s1">&#39;Error&#39;</span><span class="p">:</span>
