--- a/_modules/polyanalyst6api/project.html
+++ b/_modules/polyanalyst6api/project.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>polyanalyst6api.project &#8212; polyanalyst6api 0.20.1 documentation</title>
+    <title>polyanalyst6api.project &#8212; polyanalyst6api 0.21.0 documentation</title>
     <link rel="stylesheet" href="../../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
     <script type="text/javascript" id="documentation_options" data-url_root="../../" src="../../_static/documentation_options.js"></script>
@@ -285,8 +285,7 @@
 <span class="sd">           Use :meth:`Project.get_execution_stats` instead.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">warnings</span><span class="o">.</span><span class="n">warn</span><span class="p">(</span>
-            <span class="s1">&#39;Project.get_execution_statistics() is deprecated, use&#39;</span>
-            <span class="s1">&#39;Project.get_execution_stats() instead.&#39;</span><span class="p">,</span>
+            <span class="s1">&#39;Project.get_execution_statistics() is deprecated, use Project.get_execution_stats() instead.&#39;</span><span class="p">,</span>
             <span class="ne">DeprecationWarning</span><span class="p">,</span>
             <span class="n">stacklevel</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span>
         <span class="p">)</span>
@@ -311,12 +310,12 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">dataset</span><span class="p">(</span><span class="n">node</span><span class="p">)</span><span class="o">.</span><span class="n">preview</span><span class="p">()</span></div>
 
 <div class="viewcode-block" id="Project.set_parameters"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.Project.set_parameters">[docs]</a>    <span class="k">def</span> <span class="nf">set_parameters</span><span class="p">(</span>
-        <span class="bp">self</span><span class="p">,</span>
-        <span class="n">node</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
-        <span class="n">node_type</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
-        <span class="n">parameters</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
-        <span class="n">declare_unsync</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
-        <span class="n">hard_update</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
+            <span class="bp">self</span><span class="p">,</span>
+            <span class="n">node</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+            <span class="n">node_type</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+            <span class="n">parameters</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span>
+            <span class="n">declare_unsync</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
+            <span class="n">hard_update</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Set parameters of the selected Parameters node in the project.</span>
@@ -354,12 +353,12 @@
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">api</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;parameters/nodes&#39;</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="Parameters.set"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.Parameters.set">[docs]</a>    <span class="k">def</span> <span class="nf">set</span><span class="p">(</span>
-        <span class="bp">self</span><span class="p">,</span>
-        <span class="n">node_type</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
-        <span class="n">parameters</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">],</span> <span class="n">List</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]]],</span>
-        <span class="n">strategies</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="nb">int</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
-        <span class="n">declare_unsync</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
-        <span class="n">hard_update</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
+            <span class="bp">self</span><span class="p">,</span>
+            <span class="n">node_type</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
+            <span class="n">parameters</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">],</span> <span class="n">List</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="nb">str</span><span class="p">]]],</span>
+            <span class="n">strategies</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="nb">int</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
+            <span class="n">declare_unsync</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
+            <span class="n">hard_update</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Optional</span><span class="p">[</span><span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]]:</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Sets `node_type` parameters and strategies for the Parameters node.</span>
@@ -407,7 +406,7 @@
             <span class="n">json</span><span class="o">=</span><span class="p">{</span>
                 <span class="s1">&#39;nodes&#39;</span><span class="p">:</span> <span class="n">node_types</span><span class="p">,</span>
                 <span class="s1">&#39;declareUnsync&#39;</span><span class="p">:</span> <span class="n">declare_unsync</span><span class="p">,</span>
-            <span class="p">},</span>
+            <span class="p">}</span>
         <span class="p">)</span></div></div>
 
 
@@ -419,7 +418,6 @@
         <span class="k">except</span> <span class="n">_WrapperNotFound</span><span class="p">:</span>
             <span class="bp">cls</span><span class="o">.</span><span class="n">_update_guid</span><span class="p">()</span>
             <span class="k">return</span> <span class="n">func</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
-
     <span class="k">return</span> <span class="n">wrapper</span>
 
 
@@ -431,7 +429,6 @@
         <span class="c1"># on purpose send wrong wrapperGuid(empty string) at first request to /dataset/* endpoints</span>
         <span class="c1"># to create dataset wrapper on server and retrieve its&#39; guid by @retry_on_invalid_guid</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">guid</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">_update_guid</span><span class="p">()</span>  <span class="c1"># temporary fix until server starts to return proper error response</span>
 
 <div class="viewcode-block" id="DataSet.get_info"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.DataSet.get_info">[docs]</a>    <span class="nd">@retry_on_invalid_guid</span>
     <span class="k">def</span> <span class="nf">get_info</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">]:</span>
@@ -447,16 +444,10 @@
         <span class="sd">&quot;&quot;&quot;Returns first 1000 rows with strings truncated to 250 characters.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_api</span><span class="o">.</span><span class="n">get</span><span class="p">(</span>
             <span class="s1">&#39;dataset/preview&#39;</span><span class="p">,</span>
-            <span class="n">params</span><span class="o">=</span><span class="p">{</span>
-                <span class="s1">&#39;prjUUID&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_prj</span><span class="o">.</span><span class="n">uuid</span><span class="p">,</span>
-                <span class="s1">&#39;name&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_node</span><span class="p">[</span><span class="s1">&#39;name&#39;</span><span class="p">],</span>
-                <span class="s1">&#39;type&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_node</span><span class="p">[</span><span class="s1">&#39;type&#39;</span><span class="p">],</span>
-            <span class="p">},</span>
+            <span class="n">params</span><span class="o">=</span><span class="p">{</span><span class="s1">&#39;prjUUID&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_prj</span><span class="o">.</span><span class="n">uuid</span><span class="p">,</span> <span class="s1">&#39;name&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_node</span><span class="p">[</span><span class="s1">&#39;name&#39;</span><span class="p">],</span> <span class="s1">&#39;type&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">_node</span><span class="p">[</span><span class="s1">&#39;type&#39;</span><span class="p">]},</span>
         <span class="p">)</span></div>
 
-<div class="viewcode-block" id="DataSet.iter_rows"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.DataSet.iter_rows">[docs]</a>    <span class="k">def</span> <span class="nf">iter_rows</span><span class="p">(</span>
-        <span class="bp">self</span><span class="p">,</span> <span class="n">start</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">stop</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
-    <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Iterator</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">JSON_VAL</span><span class="p">]]:</span>
+<div class="viewcode-block" id="DataSet.iter_rows"><a class="viewcode-back" href="../../index.html#polyanalyst6api.project.DataSet.iter_rows">[docs]</a>    <span class="k">def</span> <span class="nf">iter_rows</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">start</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">stop</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Iterator</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">JSON_VAL</span><span class="p">]]:</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Iterate over rows in dataset.</span>
 
@@ -480,11 +471,9 @@
         <span class="k">if</span> <span class="n">stop</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="n">stop</span> <span class="o">=</span> <span class="n">max_row</span>
 
-        <span class="c1"># предполагается что если stop определен то пользователь в курсе количества строк в датасете</span>
+        <span class="c1"># предпологается что если stop определен то пользователь в курсе количества строк в датасете</span>
         <span class="k">if</span> <span class="ow">not</span> <span class="mi">0</span> <span class="o">&lt;=</span> <span class="n">start</span> <span class="o">&lt;=</span> <span class="n">stop</span> <span class="o">&lt;=</span> <span class="n">max_row</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
-                <span class="sa">f</span><span class="s1">&#39;start and stop arguments must be within dataset row range: (0, </span><span class="si">{</span><span class="n">max_row</span><span class="si">}</span><span class="s1">)&#39;</span>
-            <span class="p">)</span>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="sa">f</span><span class="s1">&#39;start and stop arguments must be within dataset row range: (0, </span><span class="si">{</span><span class="n">max_row</span><span class="si">}</span><span class="s1">)&#39;</span><span class="p">)</span>
 
         <span class="n">rows</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_values</span><span class="p">(</span><span class="n">stop</span><span class="p">)[</span><span class="s1">&#39;table&#39;</span><span class="p">]</span>
         <span class="n">get_text</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">_cell_text</span>
@@ -521,10 +510,7 @@
 
     <span class="nd">@retry_on_invalid_guid</span>
     <span class="k">def</span> <span class="nf">_values</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">row_count</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Union</span><span class="p">[</span><span class="n">List</span><span class="p">,</span> <span class="n">Dict</span><span class="p">]]:</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_api</span><span class="o">.</span><span class="n">get</span><span class="p">(</span>
-            <span class="s1">&#39;dataset/values&#39;</span><span class="p">,</span>
-            <span class="n">json</span><span class="o">=</span><span class="p">{</span><span class="s1">&#39;wrapperGuid&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">guid</span><span class="p">,</span> <span class="s1">&#39;rowCount&#39;</span><span class="p">:</span> <span class="n">row_count</span><span class="p">},</span>
-        <span class="p">)</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_api</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;dataset/values&#39;</span><span class="p">,</span> <span class="n">json</span><span class="o">=</span><span class="p">{</span><span class="s1">&#39;wrapperGuid&#39;</span><span class="p">:</span> <span class="bp">self</span><span class="o">.</span><span class="n">guid</span><span class="p">,</span> <span class="s1">&#39;rowCount&#39;</span><span class="p">:</span> <span class="n">row_count</span><span class="p">})</span>
 
     <span class="nd">@retry_on_invalid_guid</span>
     <span class="k">def</span> <span class="nf">_cell_text</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">row</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">col</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">_title</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
